# library

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  logging.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 886da2358aec_create_authors_and_books_tables.py  8a7ad56b6773_add_cascade_delete.py
src/: main.py
src/api_v1/authors/: __init__.py  author_repository.py  dependencies.py  repository.py  router.py  schemas.py  service.py
src/api_v1/books/: __init__.py  book_repository.py  dependencies.py  repository.py  router.py  schemas.py  service.py
src/core/: base_repository.py  config.py  db.py  mixins.py  utils.py
src/core/models/: __init__.py  author.py  base_model.py  book.py
tests/: conftest.py
tests/integration/: test_authors_api.py
