[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Istoshin Pavlo <pavloistoshin@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["all"], version = "^0.118.3"}
sqlalchemy = "^2.0.44"
alembic = "^1.16.5"
asyncpg = "^0.30.0"
rich = "^14.2.0"
httpie = "^3.2.4"
fastapi-cache2 = "^0.2.2"
redis = "^7.1.0"
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
httpx = "^0.28.1"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.9.0,<26.0.0)"
]